--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,20 +2,21 @@
   "name": "Moni Kalkulator",
   "short_name": "MoniKalk",
   "description": "Preiskalkulator für Moni",
-  "start_url": "/",
+  "start_url": "/MoniKalkulator/",
+  "scope": "/MoniKalkulator/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0891b2",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/MoniKalkulator/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "/MoniKalkulator/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
